update version of guava application always registered as new instance in claster